--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap");
 
-/* *, *::before,
+*,
+*::before,
 *::after {
   box-sizing: border-box;
-} */
+}
 
 html {
   font-size: 1em;
@@ -13,40 +14,48 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 95vh;
 
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 700;
 }
 
 .container {
-  height: 50em;
-  width: 40em;
+  height: 48em;
+  width: 30em;
 
   border-radius: 2em;
+
+  padding: 0.5em 0.5em 0.5em 0.5em;
 
   background-color: lightblue;
 
   display: grid;
   grid-template-rows: 0.5fr 1fr 7fr;
+  justify-content: stretch;
 }
 
 .above-screen {
   grid-row: 1 / 2;
   justify-self: end;
-
-  padding: 1em;
 }
 
-.above-screen > img {
-  width: 32px;
-  margin: 1em 1em 0 0;
+.history-button {
+  width: 64px;
+  padding: 1em;
+
+  background-color: rgb(231, 230, 230);
+  border-radius: 1em;
+  border-top-right-radius: 1.6em;
+  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .screen {
   grid-row: 2 / 3;
   justify-self: end;
 
-  margin: 1em 0.6em 0em 0;
+  margin: 1em 0.15em 1em 0;
 
   font-size: 3em;
   font-weight: 800;
@@ -63,7 +72,7 @@ body {
 .keypad > div {
   display: flex;
   justify-content: center;
-  align-self: center;
+  align-self: end;
 
   padding: 1.2em;
   margin: 0.1em;
@@ -74,23 +83,39 @@ body {
   background-color: rgb(96, 190, 221);
 }
 
+/* first column */
+/* .keypad > div:nth-child(4n - 3) {
+  margin-left: 0.4em;
+} */
+
+/* last column */
 .keypad > div:nth-child(4n) {
-  /* margin-right: 0.5em; */
+  margin-right: 0em;
   background-color: rgb(247, 61, 98);
   color: white;
 }
 
+/* last row */
+/* .keypad > div:nth-child(n + 21) {
+  margin-bottom: 0.6em;
+} */
+
 .keypad > div:nth-child(21) {
-  border-bottom-left-radius: 1.6em;
+  border-bottom-left-radius: 1.2em;
 }
 
 .keypad > div:last-child {
-  border-bottom-right-radius: 1.4em;
+  border-bottom-right-radius: 1.2em;
   background-color: lightgreen;
   color: black;
 }
 
 .key.number {
-  background-color: rgb(33, 166, 211);
   background-color: rgb(96, 190, 221);
+  background-color: rgb(33, 166, 211);
+}
+
+.key > sup {
+  font-size: 0.8em;
+  margin-right: 0.2em;
 }
