--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Plus+Jakarta+Sans:wght@500;800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Black+Han+Sans&display=swap"); */
 
 *,
 *::before,
@@ -20,6 +21,10 @@ body {
   font-weight: 700;
 }
 
+/* ///////////////////////////////// */
+/* ///////////// CONTAINER ///////// */
+/* ///////////////////////////////// */
+
 .container {
   height: 48em;
   width: 30em;
@@ -35,21 +40,81 @@ body {
   justify-content: stretch;
 }
 
+/* ///////////////////////////////// */
+/* ///////////// ABOVE SCREEN ////// */
+/* ///////////////////////////////// */
+
 .above-screen {
   grid-row: 1 / 2;
+  justify-self: stretch;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.name {
+  justify-self: start;
+
+  color: rgb(33, 166, 211);
+
+  margin: 0;
+  padding: 0em;
+  padding-left: 0.4em;
+
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.above-screen > button {
   justify-self: end;
+
+  display: flex;
+  width: fit-content;
+
+  border: none;
+  background-color: rgb(96, 190, 221);
+
+  border-radius: 1em;
+  border-top-right-radius: 1.6em;
+  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+
+  margin: 0;
+  margin-top: 0.2em;
+  margin-right: 0.2em;
+  padding: 0;
 }
 
 .history-button {
   width: 64px;
   padding: 1em;
 
-  background-color: rgb(231, 230, 230);
   border-radius: 1em;
   border-top-right-radius: 1.6em;
   border-top-left-radius: 0;
   border-bottom-right-radius: 0;
 }
+
+.history-button:hover {
+  cursor: pointer;
+  background-color: rgb(0, 134, 223);
+}
+
+.above-screen > button:focus-visible {
+  outline: none;
+  background-color: rgb(0, 134, 223);
+
+  border-radius: 1em;
+  border-top-right-radius: 1.6em;
+  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* ///////////////////////////////// */
+/* ///////////// SCREEN //////////// */
+/* ///////////////////////////////// */
 
 .screen {
   grid-row: 2 / 3;
@@ -59,7 +124,12 @@ body {
 
   font-size: 3em;
   font-weight: 800;
+  color: rgb(33, 166, 211);
 }
+
+/* ///////////////////////////////// */
+/* ///////////// KEYPAD //////////// */
+/* ///////////////////////////////// */
 
 .keypad {
   grid-row: 3 / 4;
@@ -69,7 +139,7 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.keypad > div {
+.keypad > button {
   display: flex;
   justify-content: center;
   align-self: end;
@@ -77,10 +147,26 @@ body {
   padding: 1.2em;
   margin: 0.1em;
 
-  color: black;
+  color: whitesmoke;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-weight: 700;
   font-size: 1.4em;
 
+  border: none;
+  border-radius: 0.5em;
+
   background-color: rgb(96, 190, 221);
+}
+
+.keypad > button:hover {
+  cursor: pointer;
+  background-color: rgb(0, 134, 223);
+}
+
+.keypad > button:focus-visible {
+  outline: none;
+  background-color: rgb(33, 199, 211);
+  background-color: rgb(0, 123, 223);
 }
 
 /* first column */
@@ -89,10 +175,15 @@ body {
 } */
 
 /* last column */
-.keypad > div:nth-child(4n) {
+.keypad > button:nth-child(4) {
   margin-right: 0em;
   background-color: rgb(247, 61, 98);
   color: white;
+}
+
+.keypad > button:nth-child(4):hover,
+.keypad > button:nth-child(4):focus-visible {
+  background-color: rgb(255, 37, 48);
 }
 
 /* last row */
@@ -100,19 +191,28 @@ body {
   margin-bottom: 0.6em;
 } */
 
-.keypad > div:nth-child(21) {
+.keypad > button:nth-child(21) {
   border-bottom-left-radius: 1.2em;
 }
 
-.keypad > div:last-child {
+.keypad > button:last-child {
   border-bottom-right-radius: 1.2em;
-  background-color: lightgreen;
-  color: black;
+  background-color: rgb(182, 255, 99);
+  color: green;
+}
+
+.keypad > button:last-child:hover,
+.keypad > button:last-child:focus-visible {
+  background-color: rgb(213, 255, 99);
 }
 
 .key.number {
-  background-color: rgb(96, 190, 221);
   background-color: rgb(33, 166, 211);
+}
+
+.key.number:hover,
+.key.number:focus-visible {
+  background-color: rgb(33, 199, 211);
 }
 
 .key > sup {
